--- a/Angular_test1/Pages/FirstPage.htm
+++ b/Angular_test1/Pages/FirstPage.htm
@@ -3,18 +3,19 @@
 <head>
     <title></title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
+    <script src="../Controllers/FirstController.js" type="text/javascript"></script>
 </head>
-<body>
+<body data-ng-app="">
 
     <h1>Title of the First Page</h1>
 
-    <div data-ng-app="" >
-        <div data-ng-init="persons=[{name:'John Smith',city:'Manhattan'}, {name:'John Doe',city:'ZigZag'}, {name:'Jane Doe',city:'Montreal'}]">
+    <div data-ng-controller="SimpleController" >
+        <div>
             Name: 
             <input type="text" data-ng-model="name" /> {{ name }}
             <br />
             <ul>
-                <li data-ng-repeat="data in persons | filter: name | orderBy: 'city">{{ data.name }} - {{ data.city }}</li>
+                <li data-ng-repeat="data in persons | filter: name | orderBy: 'city'">{{ data.name }} - {{ data.city }}</li>
             </ul>
         </div>    
     </div>
