--- a/Angular_test1/Pages/FirstPage.htm
+++ b/Angular_test1/Pages/FirstPage.htm
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>With Module Perspective</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
     <script src="../Controllers/FirstController.js" type="text/javascript"></script>
 </head>
-<body data-ng-app="">
+<body data-ng-app="demoApp">
 
     <h1>Title of the First Page</h1>
 
