--- a/Angular_test1/Pages/FirstPage.htm
+++ b/Angular_test1/Pages/FirstPage.htm
@@ -16,12 +16,15 @@
     <ul>
         <li data-ng-repeat="data in persons">{{ data.name }} - La city es: {{ data.city }} </li>
     </ul>    
+    <br />
 
-        <div>
-            <p>Actions Div:</p>
-             <a href="#/partial1" >View 1</a>  <br />
-            <a href="#/partial2" >View 2</a>    <br />
-            <a href="#/sameLevel" >same Level</a>  <br />
-        </div>
+    <div>
+        <p>Actions Div:</p>
+            <a href="#/partial1" >View 1</a>  <br />
+        <a href="#/partial2" >View 2</a>     <br />
+        <a href="#/sameLevel" >same Level</a>  <br />
+        <a href="#/jugadores" >Agregar Nuevo Jugador</a>  <br />
+        <a href="#/buscarJugadores" >Buscar Jugadores</a>  <br />
+    </div>
 </body>
 </html>
